<resources>
    <string name="app_name">UIFrameV2</string>



    <string name="error_net">当前网络不可用，请检查您的网络设置</string>
    <string name="error_net_toast">网络不给力</string>
    <string name="determine">确定</string>
    <string name="determine2">确认</string>
    <string name="cancel">取消</string>
    <string name="empty_error_net_server">数据加载失败，请返回重试!</string>

    <string name="main_tab_homepage">首页</string>
    <string name="main_tab_yidi">报销查询</string>
    <string name="main_tab_drug_search">药品查询</string>
    <string name="main_tab_recomment">资讯</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_tab_biyao">比药</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>


    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>

    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>


    <string name="title_activity_style_classics">ClassicsHeader</string>






















</resources>
